D-4983 Steamboat theme update 2025 update z-index issue

--- a/vufind/web/interface/themes/steam_resp/css/main.less
+++ b/vufind/web/interface/themes/steam_resp/css/main.less
@@ -321,6 +321,7 @@ a.btn.btn-sm.btn-default {
     background-position: bottom right;
     background-repeat: no-repeat;
     background-size: 310px;
+    z-index: -10;
   }
 }
 
